WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191396
[Cocoa] Fix failing imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html test
https://bugs.webkit.org/show_bug.cgi?id=191396
Summary
[Cocoa] Fix failing imported/w3c/web-platform-tests/media-source/mediasource-...
Jer Noble
Reported
2018-11-07 13:40:21 PST
[Cocoa] Fix failing imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html test
Attachments
Patch
(64.34 KB, patch)
2018-11-07 13:50 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(3.33 MB, application/zip)
2018-11-07 14:48 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews101 for mac-sierra
(2.43 MB, application/zip)
2018-11-07 14:52 PST
,
EWS Watchlist
no flags
Details
Patch for landing
(64.14 KB, patch)
2018-11-07 15:41 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-sierra
(2.49 MB, application/zip)
2018-11-07 16:32 PST
,
EWS Watchlist
no flags
Details
Patch for landing
(65.53 KB, patch)
2018-11-07 16:52 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-11-07 13:49:39 PST
<
rdar://problem/45887823
>
Jer Noble
Comment 2
2018-11-07 13:49:49 PST
FYI: I plan on submitting the web-platform-test part of this patch as a pull-request to the web-platform-test repo.
Jer Noble
Comment 3
2018-11-07 13:50:42 PST
Created
attachment 354143
[details]
Patch
Jer Noble
Comment 4
2018-11-07 14:17:46 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/13973
EWS Watchlist
Comment 5
2018-11-07 14:48:06 PST
Comment hidden (obsolete)
Comment on
attachment 354143
[details]
Patch
Attachment 354143
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9898742
New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html
EWS Watchlist
Comment 6
2018-11-07 14:48:07 PST
Comment hidden (obsolete)
Created
attachment 354158
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2018-11-07 14:52:32 PST
Comment hidden (obsolete)
Comment on
attachment 354143
[details]
Patch
Attachment 354143
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9899028
New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html
EWS Watchlist
Comment 8
2018-11-07 14:52:34 PST
Comment hidden (obsolete)
Created
attachment 354159
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
Jer Noble
Comment 9
2018-11-07 15:27:50 PST
The Sierra bots don't support HEVC decode; I'll have to update the expected results to be >=HighSierra.
Jer Noble
Comment 10
2018-11-07 15:41:30 PST
Created
attachment 354171
[details]
Patch for landing
EWS Watchlist
Comment 11
2018-11-07 16:32:08 PST
Comment on
attachment 354171
[details]
Patch for landing
Attachment 354171
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9900915
New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html
EWS Watchlist
Comment 12
2018-11-07 16:32:10 PST
Created
attachment 354178
[details]
Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
Jer Noble
Comment 13
2018-11-07 16:52:24 PST
Created
attachment 354181
[details]
Patch for landing
WebKit Commit Bot
Comment 14
2018-11-09 09:25:00 PST
Comment on
attachment 354181
[details]
Patch for landing Clearing flags on attachment: 354181 Committed
r238035
: <
https://trac.webkit.org/changeset/238035
>
WebKit Commit Bot
Comment 15
2018-11-09 09:25:02 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 16
2018-12-07 13:10:49 PST
This test is still failing imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html History:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2Fmediasource-changetype-play.html
Ryosuke Niwa
Comment 17
2019-04-15 20:24:28 PDT
(In reply to Truitt Savell from
comment #16
)
> This test is still failing > imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html > > History: >
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard
. > html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fmedia- > source%2Fmediasource-changetype-play.html
Can we file a new bug to track this?
Truitt Savell
Comment 18
2019-04-16 09:28:41 PDT
(In reply to Ryosuke Niwa from
comment #17
)
> (In reply to Truitt Savell from
comment #16
) > > This test is still failing > > imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html > > > > History: > >
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard
. > > html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fmedia- > > source%2Fmediasource-changetype-play.html > > Can we file a new bug to track this?
Bug:
https://bugs.webkit.org/show_bug.cgi?id=190976
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug