[Cocoa] Fix failing imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html test https://bugs.webkit.org/show_bug.cgi?id=191396

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Modify the changetype test suite to include a HEVC version.

* web-platform-tests/media-source/hevc/test-v-128k-320x240-24fps-8kfr.mp4: Added.
* web-platform-tests/media-source/mediasource-changetype-util.js:
(findSupportedChangeTypeTestTypes):

Source/WebCore:

When changeType() is called, exempt video and text tracks (in addition to just audio tracks)
from "same codec" requirements.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::validateInitializationSegment):

LayoutTests:

* platform/mac/imported/w3c/web-platform-tests/media-source/mediasource-changetype-play-expected.txt:
* platform/mac-sierra/imported/w3c/web-platform-tests/media-source/mediasource-changetype-play-expected.txt:


Canonical link: https://commits.webkit.org/206249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238035 268f45cc-cd09-0410-ab3c-d52691b4dbfc